--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^3.2.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.2.0",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^3.8.2"
   },
