--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
